# jetcam

./: .gitignore  LICENSE  README.md  load_pseye.sh  pyproject.toml
examples/: live_feed.py  mic_test.py
jetcam/: __init__.py  camera.py  microphone.py
kernel_module/gspca/: Makefile
